---
source: fortitude/src/rules/correctness/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/correctness/C092.f90:1:1: C092 function not contained within (sub)module or program
  |
1 | integer function double(x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ C092
2 |   integer, intent(in) :: x
3 |   double = 2 * x
  |

./resources/test/fixtures/correctness/C092.f90:6:1: C092 subroutine not contained within (sub)module or program
  |
4 | end function double
5 |
6 | subroutine triple(x)
  | ^^^^^^^^^^^^^^^^^^^^ C092
7 |   integer, intent(inout) :: x
8 |   x = 3 * x
  |
